--- a/HEB BEBES/Cube 02.html
+++ b/HEB BEBES/Cube 02.html
@@ -732,10 +732,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i5.i380.image.css:image/base/css*/
-#i380 { opacity: 1; }
-/*#/#*//*#i380.i381.positioning.css:positioning/base/css.2*/
-#i380 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 91px;
+/*#/#*//*#i5.i386.image.css:image/base/css*/
+#i386 { opacity: 1; }
+/*#/#*//*#i386.i387.positioning.css:positioning/base/css.2*/
+#i386 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 91px;
         -ms-transform: translate(0, 0) translate(-1px, 160px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(-1px, 160px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-1px, 160px) rotate(0deg);
@@ -828,14 +828,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i6.i382.image.css:image/base/css*/
-#i382 { opacity: 1; }
-/*#/#*//*#i382.i383.positioning.css:positioning/base/css.2*/
-#i382 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 307px; height: 92px;
-        -ms-transform: translate(0, 0) translate(-4px, 160px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-4px, 160px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-4px, 160px) rotate(0deg);
-        transform: translate(0, 0) translate(-4px, 160px) rotate(0deg);
+/*#/#*//*#i6.i388.image.css:image/base/css*/
+#i388 { opacity: 1; }
+/*#/#*//*#i388.i389.positioning.css:positioning/base/css.2*/
+#i388 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 306px; height: 92px;
+        -ms-transform: translate(0, 0) translate(-3px, 160px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-3px, 160px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-3px, 160px) rotate(0deg);
+        transform: translate(0, 0) translate(-3px, 160px) rotate(0deg);
 }
 /*#/#*//*#i6.i196.text.css:text/base/css*/
 #i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Lehigh-Personal-SemiBold; font-size: 16px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
@@ -958,7 +958,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i378.image.html:image/html-->
-<img id="i378" src="https://i.imgur.com/hspFLyl.jpg"/>
+<img id="i378" src="https://i.imgur.com/4NGWH8a.jpg"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">La estimulación temprana tiene un impacto súper positivo en el primer año de los bebes.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
@@ -981,8 +981,8 @@ url('fonts/') format('svg');
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i380.image.html:image/html-->
-<img id="i380" src="https://i.imgur.com/hspFLyl.jpg"/>
+<!--#/#--><!--#i5.i386.image.html:image/html-->
+<img id="i386" src="https://i.imgur.com/4NGWH8a.jpg"/>
 <!--#/#--><!--#i5.i336.image.html:image/html-->
 <img id="i336" src="https://i.imgur.com/LjM7aFg.png"/>
 <!--#/#--><!--#i5.i278.text.html:text/html-->
@@ -1005,8 +1005,8 @@ url('fonts/') format('svg');
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
-<!--#/#--><!--#i6.i382.image.html:image/html-->
-<img id="i382" src="https://i.imgur.com/hspFLyl.jpg"/>
+<!--#/#--><!--#i6.i388.image.html:image/html-->
+<img id="i388" src="https://i.imgur.com/4NGWH8a.jpg"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
 <div id="i196">Estimular a nuestros pequeños desde pequeños les ayuda a desarrollarse de forma integral.</div>
 <!--#/#--><!--#i6.i334.image.html:image/html-->
@@ -1112,7 +1112,7 @@ var el = document.getElementById('i316');
 
 el.addEventListener('click', function(e){
     /*#i318.i319.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1141,10 +1141,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
  
-/*#/#*//*#i5.i380.image.js:image/base/js*/
+/*#/#*//*#i5.i386.image.js:image/base/js*/
 
-/*#/#*//*#i380.i381.positioning.js:positioning/base/js.2*/
-bmShow('i380');
+/*#/#*//*#i386.i387.positioning.js:positioning/base/js.2*/
+bmShow('i386');
 /*#/#*//*#i5.i336.image.js:image/base/js*/
 
 /*#/#*//*#i5.i340.image.js:image/base/js*/
@@ -1218,10 +1218,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
    
-/*#/#*//*#i6.i382.image.js:image/base/js*/
+/*#/#*//*#i6.i388.image.js:image/base/js*/
 
-/*#/#*//*#i382.i383.positioning.js:positioning/base/js.2*/
-bmShow('i382');
+/*#/#*//*#i388.i389.positioning.js:positioning/base/js.2*/
+bmShow('i388');
 /*#/#*//*#i6.i334.image.js:image/base/js*/
 
 /*#/#*//*#i334.i335.positioning.js:positioning/base/js.2*/
@@ -1266,7 +1266,7 @@ var el = document.getElementById('i356');
 
 el.addEventListener('click', function(e){
     /*#i358.i359.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1375,10 +1375,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i380.image.meta:image/meta*/
+/*#/#*//*#i5.i386.image.meta:image/meta*/
 name: FONDO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i380.i381.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i386.i387.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i336.image.meta:image/meta*/
 name: Imagen de Cuadro copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1424,10 +1424,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i382.image.meta:image/meta*/
+/*#/#*//*#i6.i388.image.meta:image/meta*/
 name: FONDO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i382.i383.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i388.i389.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i196.text.meta:text/meta*/
 name: Texto; customName: 1;
