--- a/Juguetrón Lego/FijoCompleto1.html
+++ b/Juguetrón Lego/FijoCompleto1.html
@@ -75,7 +75,7 @@
 
         .value_wrapper.size_300x250 {
             width: 298px;
-            height: 248px;
+            height: 598px;
         }
 
         .value_wrapper.size_320x480 {
@@ -85,7 +85,7 @@
 
         .value_wrapper.size_320x50 {
             width: 318px;
-            height: 48px;
+            height: 598px;
         }
 
         .value_wrapper.size_728x90 {
@@ -100,7 +100,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/YyONODP.png");
+            background: url("https://i.imgur.com/AFAJRMe.png");
             background-size: cover;
         }
 
@@ -113,7 +113,7 @@
             z-index: 2;
             margin-left: 40%;
             left: -30px;
-            background-color: #008e00;
+            background-color: #;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
