--- a/Kipling/slider-extendido.html
+++ b/Kipling/slider-extendido.html
@@ -265,12 +265,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/5UDkRt6.png" alt="" />
-                    <img src="https://i.imgur.com/NpAJZr7.png" alt="" />
-                    <img src="https://i.imgur.com/zgfG2vq.png" alt="" />
+                    <img src="https://i.imgur.com/3xle6OU.png" alt="" />
+                    <img src="https://i.imgur.com/zPZJDr5.png" alt="" />
+                    <img src="https://i.imgur.com/3h1BvGW.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/5UDkRt6.png" alt="" />
+                    <img src="https://i.imgur.com/3xle6OU.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
