--- a/Kipling/slider-extendido2.html
+++ b/Kipling/slider-extendido2.html
@@ -265,12 +265,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/bbasaiW.png" alt="" />
-                    <img src="https://i.imgur.com/nZ1RL7m.png" alt="" />
-                    <img src="https://i.imgur.com/zgfG2vq.png" alt="" />
+                    <img src="https://i.imgur.com/fKaZFjX.png" alt="" />
+                    <img src="https://i.imgur.com/HJ1pLLm.png" alt="" />
+                    <img src="https://i.imgur.com/UuXLzUp.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/5UDkRt6.png" alt="" />
+                    <img src="https://i.imgur.com/fKaZFjX.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
