--- a/Kipling/slider-320x480_completo.html
+++ b/Kipling/slider-320x480_completo.html
@@ -264,12 +264,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/7yrmw5z.png" alt="" />
-                    <img src="https://i.imgur.com/P6vvzPr.png" alt="" />
-                    <img src="https://i.imgur.com/hjnIrDX.png" alt="" />
+                    <img src="https://i.imgur.com/ZTRqyQq.png" alt="" />
+                    <img src="https://i.imgur.com/fHpqew9.png" alt="" />
+                    <img src="https://i.imgur.com/81hx23m.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/7yrmw5z.png" alt="" />
+                    <img src="https://i.imgur.com/ZTRqyQq.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
