--- a/Kipling/slider-320x480_completo2.html
+++ b/Kipling/slider-320x480_completo2.html
@@ -264,12 +264,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/rvbK2Q5.png" alt="" />
-                    <img src="https://i.imgur.com/lmIL8Un.png" alt="" />
-                    <img src="https://i.imgur.com/eVQlGXU.png" alt="" />
+                    <img src="https://i.imgur.com/y3Q4fJE.png" alt="" />
+                    <img src="https://i.imgur.com/GvAZmhw.png" alt="" />
+                    <img src="https://i.imgur.com/YYaP7Yi.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/rvbK2Q5.png" alt="" />
+                    <img src="https://i.imgur.com/y3Q4fJE.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
