--- a/HEB BEBES/FadeBig 02.html
+++ b/HEB BEBES/FadeBig 02.html
@@ -379,7 +379,7 @@
 
 <body class="tgx">
    
-   <a href= "https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="_blank">
+   <a href= "https://hebbabies.com.mx/category/alimentarse-bien/" target="_blank">
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
 
@@ -396,7 +396,7 @@
         </div>
 
         <div class="tgx_text"> 
-            <span class="tgx_text_title tgx_text_bold" style="font-family:Lehigh-Personal-Light; color:#000000; font-size:20px; text-decoration: none;"> La estimulación temprana tiene un impacto súper positivo en el primer año de los bebes.</span><br>
+            <span class="tgx_text_title tgx_text_bold" style="font-family:Lehigh-Personal-Light; color:#000000; font-size:20px; text-decoration: none;"> Conoce en #HEBBabies todo lo que tu bebé puede comer en sus primeros años.</span><br>
           
                 
   
@@ -404,13 +404,13 @@
 
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top:15px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/category/alimentarse-bien/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/Uqxafdx.png" title="compartir en facebook" width="25" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="block">
+                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://hebbabies.com.mx/category/alimentarse-bien/" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="25" src="https://i.imgur.com/l2oV6lx.png" title="compartir en whatsapp" width="25" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/crecer-sano/ejercicios-de-estimulacion-temprana-para-bebes/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/category/alimentarse-bien/" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="25" src="https://i.imgur.com/j31aPcx.png" title="compartir en twitter" width="25" /></a>
                     </span>
                 </div>
