--- a/Formatos con eventos/FORMULARIOS/aprobado (encrypted)/formulario-def.html
+++ b/Formatos con eventos/FORMULARIOS/aprobado (encrypted)/formulario-def.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
-    <title>300-600 slidemap</title>
+    <title>300-600 form-panamericana</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
