--- a/HEB BEBES/Zoom 02.html
+++ b/HEB BEBES/Zoom 02.html
@@ -59,6 +59,7 @@ a {text-decoration: none;}
             width: 298px;
             height: 598px;
             background-image: url("https://i.imgur.com/sZdr38D.jpg")
+            
         }
 
         .cta {
@@ -194,7 +195,7 @@ a {text-decoration: none;}
 </div>
 
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;">#HEBBabies</span><br>
-     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> <strong>Tienen todo un mundo por descubrir, disfruta esta nueva etapa. Conoce los mejores tips en nuestro blog H-E-B Babies 👇.</strong>  </p></span>
+     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;">Tienen todo un mundo por descubrir, disfruta esta nueva etapa. Conoce los mejores tips en nuestro blog H-E-B Babies 👇.</p></span>
                  
                  <span class="ism_text_bold" style="color: blue;line-height:1em; font-size:16px; width:95%; text-align:left;">
                         <p style=" line-height: 1em; margin-left: 15px; margin-top: -3px;">
@@ -213,7 +214,7 @@ a {text-decoration: none;}
                             <a class="shared" href="whatsapp://send?text=https://hebbabies.com.mx/category/aprender-mas/" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="24" src="https://i.imgur.com/l2oV6lx.png" title="compartir en whatsapp" width="24" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/category/aprender-mas/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https:https://hebbabies.com.mx/category/aprender-mas/" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="24" src="https://i.imgur.com/j31aPcx.png" title="compartir en twitter" width="24" /></a>
                     </span></div>
 
