--- a/Argeta Abril/ZoomExp300x600.html
+++ b/Argeta Abril/ZoomExp300x600.html
@@ -170,7 +170,7 @@ a {text-decoration: none;}
          
         <!-- <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:90%; color: white; font-family: Trebuchet MS;">Compra agora!</span></div>-->
    
-<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;">
+<div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none; cursor:pointer;">
   <ol>
     <li>
       <img src="https://i.imgur.com/1bQYXip.png">
