--- a/Argeta Abril/ZoomExp300x600.html
+++ b/Argeta Abril/ZoomExp300x600.html
@@ -161,10 +161,10 @@ a {text-decoration: none;}
 <link rel="stylesheet" href="ism/css/my-slider.css"/>
 <script src="ism/js/ism-2.2.min.js"></script>
 
-</head>
-<body class="zoom" style="margin:0px;">
 
-    <a href="https://www.argeta.com/en/" target="_blank">
+<body class="zoom" style="margin:0px;">
+<div class="wrapper size_300x250">
+    <a href="https://www.argeta.com/en/" target="_blank" cursor="pointer">
 
  	 <div class="wrapper size_300x250">
          
