--- a/Argeta Abril/ZoomExp300x600.html
+++ b/Argeta Abril/ZoomExp300x600.html
@@ -164,7 +164,7 @@ a {text-decoration: none;}
 
 <body class="zoom" style="margin:0px;">
 <div class="wrapper size_300x250">
-    <a href="https://www.argeta.com/en/" target="_blank" cursor="pointer">
+    <a href="https://usa.argeta.com/" target="_blank" cursor="pointer">
 
  	 <div class="wrapper size_300x250">
          
@@ -201,13 +201,13 @@ a {text-decoration: none;}
                                        
                    </div>
                    <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-3px;margin-left:12px;"><span>  
-                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.argeta.com/en/"  target="block">    
+                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://usa.argeta.com/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/b6cR7oL.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https://www.argeta.com/en/" target="block">
+                            <a class="shared" href="whatsapp://send?text=https://usa.argeta.com/" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="22" src="https://i.imgur.com/kTLOm4q.png" title="compartir en whatsapp" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https:https://www.argeta.com/en/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https:https://usa.argeta.com/" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/rvE4mdI.png" title="compartir en twitter" width="22" /></a>
                     </span></div>
         </div>
