--- a/AUDI/cube.html
+++ b/AUDI/cube.html
@@ -508,13 +508,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Black", Gadget, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 279px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
 }
 /*#/#*//*#i4.i376.image.css:image/base/css*/
 #i376 { opacity: 1; }
@@ -704,7 +704,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(230px, 217px) rotate(0deg);
 }
 /*#/#*//*#i5.i278.text.css:text/base/css*/
-#i278 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i278 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Black", Gadget, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i278.i279.positioning.css:positioning/base/css.1*/
 #i278 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 290px; height: 53px;
         -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
@@ -735,7 +735,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i196.text.css:text/base/css*/
-#i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Black", Gadget, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
 #i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 291px; height: 54px;
         -ms-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
