--- a/AUDI/venetian.html
+++ b/AUDI/venetian.html
@@ -2123,33 +2123,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#i30.shape.css:shape/base/css*/
+/*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
+}
+/*#/#*//*#i30.shape.css:shape/base/css*/
 #i30 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.2*/
-#i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-}
-/*#/#*//*#i2.slice.css:slice/base/css*/
-#i2.adf-SlicedUnit {
-    position: absolute;
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    -ms-animation-fill-mode:forwards;
-    animation-fill-mode: forwards;
-    -ms-touch-action: none;
-    background: transparent;
-}
-
-/*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2205,19 +2184,68 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .adf-SliceBox .adf-Controls--slicePrevious:hover, .adf-SliceBox .adf-Controls--sliceNext:hover {
     background-color: #5AAAD2;
 }
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.2*/
+#i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i71.shape.css:shape/base/css*/
-#i71 { background-color: #000000; opacity: 0.00;
+/*#/#*//*#i2.slice.css:slice/base/css*/
+#i2.adf-SlicedUnit {
+    position: absolute;
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    -ms-animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
+    -ms-touch-action: none;
+    background: transparent;
 }
-/*#/#*//*#i71.i72.positioning.css:positioning/base/css.2*/
-#i71 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+
+/*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 330px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i35.image.css:image/base/css*/
+#i35 { opacity: 1; }
+/*#/#*//*#i35.i36.positioning.css:positioning/base/css.2*/
+#i35 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 74px; height: 30px;
+        -ms-transform: translate(0, 0) translate(238px, 444px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(238px, 444px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(238px, 444px) rotate(0deg);
+        transform: translate(0, 0) translate(238px, 444px) rotate(0deg);
+}
+/*#/#*//*#i37.text.css:text/base/css*/
+#i37 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 26px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i37.i38.positioning.css:positioning/base/css.2*/
+#i37 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 56px;
+        -ms-transform: translate(0, 0) translate(24px, 341px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(24px, 341px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(24px, 341px) rotate(0deg);
+        transform: translate(0, 0) translate(24px, 341px) rotate(0deg);
+}
+/*#/#*//*#i41.text.css:text/base/css*/
+#i41 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i41.i42.positioning.css:positioning/base/css.2*/
+#i41 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 216px; height: 62px;
+        -ms-transform: translate(0, 0) translate(50px, 407px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(50px, 407px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(50px, 407px) rotate(0deg);
+        transform: translate(0, 0) translate(50px, 407px) rotate(0deg);
+}
+/*#/#*//*#i26.button.css:button/base/css*/
+#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(145,145,145,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
+#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 319px; height: 480px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2228,17 +2256,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/4wUGFu1.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/jZUHSzj.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/tdCVk5R.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/NDu8X4P.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/Wy8I9rL.jpg"></dataimg>
-<!--#/#--><!--#i2.i75.slice-image.html:slice-image/html.1-->
-<dataimg id="i75" src="https://i.imgur.com/m5i4jFC.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/HG0tHDA.jpg"></dataimg>
+<!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
+<dataimg id="i32" src="https://i.imgur.com/6LYlpQX.jpg"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i71.shape.html:shape/html-->
-<div id="i71"></div>
+<!--#/#--><!--#i35.image.html:image/html-->
+<img id="i35" src="https://i.imgur.com/rw7KVcM.png"/>
+<!--#/#--><!--#i37.text.html:text/html-->
+<div id="i37">El mejor atardecer te está esperando.</div>
+<!--#/#--><!--#i41.text.html:text/html-->
+<div id="i41">Vívelo a bordo del nuevo Audi A7 Sportback.</div>
+<!--#/#--><!--#i26.button.html:button/html-->
+<button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2283,46 +2317,28 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i4.i82.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i4');
-
-el.addEventListener('click', function(e){
-    /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.audi.com.mx/mx/web/es/models/a7/a7-sportback.html'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i75.slice-image.js:slice-image/base/js.1*/
+/*#/#*//*#i2.i32.slice-image.js:slice-image/base/js.1*/
 
-/*#/#*//*#i2.i86.actions.js:actions/base/js.1*/
+/*#/#*//*#i35.image.js:image/base/js*/
+
+/*#/#*//*#i35.i36.positioning.js:positioning/base/js.2*/
+bmShow('i35');
+/*#/#*//*#i37.i38.positioning.js:positioning/base/js.2*/
+bmShow('i37');
+/*#/#*//*#i41.i42.positioning.js:positioning/base/js.2*/
+bmShow('i41');
+/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
+bmShow('i26');
+/*#/#*//*#i26.i43.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i2');
+var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
-    /*#i86.i87.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.audi.com.mx/mx/web/es/models/a7/a7-sportback.html'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i71.i72.positioning.js:positioning/base/js.2*/
-bmShow('i71');
-/*#/#*//*#i71.i84.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i71');
-
-el.addEventListener('click', function(e){
-    /*#i84.i85.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i43.i44.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.audi.com.mx/mx/web/es/models/a7/a7-sportback.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2351,18 +2367,32 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 4wUGFu1.jpg; fileId: ; sourceTypeId: externalUrl;
+name: jZUHSzj.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: tdCVk5R.jpg; fileId: ; sourceTypeId: externalUrl;
+name: NDu8X4P.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: Wy8I9rL.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i75.slice-image.meta:slice-image/meta.1*/
-name: m5i4jFC.jpg; fileId: ; sourceTypeId: externalUrl;
+name: HG0tHDA.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i32.slice-image.meta:slice-image/meta.1*/
+name: 6LYlpQX.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i71.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i71.i72.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i35.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i35.i36.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i37.text.meta:text/meta*/
+name: El mejor atardecer te está esperando.; customName: false;
+/*#/#*//*#i37.i38.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i41.text.meta:text/meta*/
+name: Vívelo a bordo del nuevo Audi A7 Sportback.; customName: false;
+/*#/#*//*#i41.i42.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i26.button.meta:button/meta*/
+name: ;
+customName: false;
+/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
