--- a/AUDI/zoom.html
+++ b/AUDI/zoom.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:black; font-size:22px;  text-decoration: none;"><b> Nuevo Audi A7 Sportback, Disfruta de las mejores experiencias.</b></span><br>
+ <div class="ism_text"> <span class=" ism_text_title" style="font-family:Trebuchet MS; color:black; font-size:20px;  text-decoration: none;"><b> Nuevo Audi A7 Sportback, Disfruta de las mejores experiencias.</b></span><br>
 
    <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;">  </p></span>
                    
