--- a/AUDI/fade.html
+++ b/AUDI/fade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kipling-Map</title>
+    <title>fade</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
         .corona p {
@@ -236,8 +236,12 @@
         .corona #botones-para-compartir {
             text-align:left;
             margin-left: 12px
+
+
             
         }
+
+
 
         .likedini:hover,
         .facebooki:hover,
@@ -267,8 +271,12 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"> <img src="" style="height:45px;"></a></div>
-        <a href="" style="display: block;" target="_blank">
+
+        <div class="cta"><a href="http://www.audi.com.mx/mx/web/es/models/a7/a7-sportback.html" target="_blank"> 
+
+        
+            <img src="" style="height:45px;"></a></div>
+        <a href="http://www.audi.com.mx/mx/web/es/models/a7/a7-sportback.html" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
@@ -277,7 +285,7 @@
             <div class="bzm_text"> <span class="bzm_text_title bzm_text" style="color:#000;line-height:1;font-size:19px;text-align:center;">¿Sabes lo que significa estar en contacto con el mañana? Nuevo Audi A7 Sportback.</span></div>
 
 
-            <div style="bottom:0px;height:30px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/rw7KVcM.png" style="height:30px;margin-top:-1px;">
+            <div style="bottom:0px;height:30px;text-align:right ;margin-top:0px margin-right: 5px;"> <img src="https://i.imgur.com/rw7KVcM.png" style="height:30px;margin-top:-5px;">
 
                  <!--<div id="botones-para-compartir" style="display:inline;float:left;margin-left:10px;margin-top:-25px;">
                     <span>  
