--- a/Toyota vallejo/FadeBig2.html
+++ b/Toyota vallejo/FadeBig2.html
@@ -357,7 +357,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              ¿Sabes cual es el auto más vendido del mundo?
+              ¿Sabes cuál es el auto más vendido del mundo?
             </span>
             <br/>
              <span class="tgx_text tgx_text_small" style="margin-top:-6px;">
