--- a/Toyota vallejo/FadeBigGeo.html
+++ b/Toyota vallejo/FadeBigGeo.html
@@ -387,7 +387,7 @@
        
         <div class="tgx_text"> 
                          <span class="tgx_text_title tgx_text_bold">
-            ¿Sabes cual es el auto más vendido del mundo?
+            ¿Sabes cuál es el auto más vendido del mundo?
             </span> <br>
                         <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:14px;  text-align:center;">
                         <p style="margin-top: 5px; line-height: 1.1em; width: 88%; margin-left: 17px;">
