--- a/Toyota vallejo/Cube.html
+++ b/Toyota vallejo/Cube.html
@@ -817,7 +817,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Cual es la ruta más larga?</div>
+<div id="i14">¿Cuál es la ruta más larga?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/0OFve2K.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
